[package]
version = "0.10.0"
authors = [
    "Jorge Aparicio <jorge@japaric.io>",
    "Daniel Egger <daniel@eggers-club.de>",
]
description = "Peripheral access API for nRF51 microcontrollers"
documentation = "https://docs.rs/nrf51"
keywords = ["no-std", "arm", "cortex-m", "nrf51"]
license = "0BSD"
name = "nrf51"
repository = "https://github.com/nrf-rs/nrf51"
edition = "2018"

[dependencies]
vcell = "0.1.2"
cortex-m = "0.7.3"
bare-metal = "1.0.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.10"

[features]
rt = ["cortex-m-rt/device"]
